--- a/resources/scss/dashboard/style.scss
+++ b/resources/scss/dashboard/style.scss
@@ -1,4 +1,4 @@
-@import '../../node_modules/normalize.css/normalize';
+@import '../../../node_modules/normalize.css/normalize';
 @import 'fonts';
 
 $grey: #7b767c;
