--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -1224,5 +1224,61 @@ body{
   }
 }
 
+.popup-form{
+  &__wrapper{
+    width: 500px;
+    margin: 100px auto 0;
+    background-color: #fff;
+    border-radius: 15px;
+    padding: 25px;  
+  }
+  &__form{
+    margin-top: 10px;
+  }
+  &__input-wrapper{
+    margin-bottom: 70px;
+    position: relative;
+  }
+  &__input{
+    display: block;
+    width: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid rgba($color: grey, $alpha: 0.5);
+    margin-bottom: 10px;
+    font-size: 14px;
+    &::placeholder {
+      opacity: .8;
+      font-size: 14px;
+    }
+  }
+  &__submit{
+    font-size: 14px;
+    width: 100%;
+    height: 40px;
+    border-radius: 10px;
+    padding: 10px;
+    cursor: pointer;  
+    border: none;
+    color: grey;
+    background-color: #dfdddd;
+    margin-bottom: 20px;
+    transition: all .3s linear;
+  }
+  &__submit-disabled{
+    background-color: #f8f8f8;
+  }
+  &__password-img{
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    opacity: .5;     
+  }
+}
+
 @import "media.scss";
 
