--- a/resources/scss/media.scss
+++ b/resources/scss/media.scss
@@ -91,19 +91,44 @@
 }
 
 @media (max-width: 768px) {
+  .main{
+    &__container{
+      padding: 0;
+    }
+    &__field-wrapper,
+    &__community,
+    &__article,
+    &__comments,
+    &__reviews{
+      padding: 0 20px;
+    }
+  }
+
   .comments{
     &__wrapper{
       padding: 40px 50px;
     }
   }
   .banner{
+    &__br{
+      display: block;
+    }
     &__wrapper{
       grid-template-rows: auto auto auto auto;
+      padding: 16px;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 15px;
+      border-bottom-left-radius: 15px;
     }
     &__titles{
       grid-row: 1 / 2;
       grid-column: 1 / 3;
-      text-align: center;
+    }
+    &__title{
+      font-size: 40px;
+      letter-spacing: -1px;
+      line-height: 48px;
     }
     &__buttons{
       grid-row: 2 / 3;
@@ -177,9 +202,6 @@
     }
   }
   .banner{
-    &__title{
-      font-size: 42px;
-    }
     &__buttons{
       flex-direction: column;
       text-align: center;
@@ -227,7 +249,7 @@
 @media (max-width: 450px) {
   .banner{
     &__subtitle{
-      font-size: 18px;
+      font-size: 20px;
     }
   }
 }
@@ -239,11 +261,6 @@
     }
     &__button-img{
       display: none;
-    }
-  }
-  .banner{
-    &__subtitle{
-      font-size: 18px;
     }
   }
 }
