--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -175,10 +175,38 @@ body{
     grid-row: 1 / 2;
     grid-column: 2 / 3;  
     width: auto;
+  }
+  &__field-wrapper{
     display: grid;
-    grid-template-rows: auto auto auto auto; 
+    width: auto;
+    grid-template-rows: auto auto auto; 
     grid-template-columns: 60% 30%;
     gap: 60px 10%;
+  }
+  &__banner{
+
+  }
+  &__stories{
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+  }
+  &__products{
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+    overflow: auto;
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+      &::-webkit-scrollbar { 
+      display: none;
+      }
+  }
+  &__news{
+    grid-row: 3 / 4;
+    grid-column: 1 / 2;
+  }
+  &__companies{
+    grid-row: 3 / 4;
+    grid-column: 2 / 3;
   }
   &__community{
     grid-row: 2 / 3;
@@ -195,32 +223,6 @@ body{
   &__article{
     grid-row: 5 / 6;
     grid-column: 1 / 3;
-  }
-  &__banner{
-    grid-row: 1 / 2;
-    grid-column: 1 / 3;
-  }
-  &__stories{
-    grid-row: 2 / 3;
-    grid-column: 1 / 3;
-  }
-  &__products{
-    grid-row: 3 / 4;
-    grid-column: 1 / 3;
-    overflow: auto;
-      -ms-overflow-style: none;
-      scrollbar-width: none;
-      &::-webkit-scrollbar { 
-      display: none;
-      }
-  }
-  &__news{
-    grid-row: 4 / 5;
-    grid-column: 1 / 2;
-  }
-  &__companies{
-    grid-row: 4 / 5;
-    grid-column: 2 / 3;
   }
 }
 
@@ -263,6 +265,9 @@ body{
 }
 
 .banner{
+  &__br{
+    display: none;
+  }
   &__wrapper{
     display: grid;
     grid-template-rows: auto auto; 
@@ -270,7 +275,8 @@ body{
     gap: 30px 0;
     background-color: #fff;
     border-radius: 15px;
-    padding: 25px;  
+    padding: 25px; 
+    margin-bottom: 50px; 
   }
   &__titles{
     grid-row: 1 / 2;
@@ -296,18 +302,23 @@ body{
     justify-content: flex-end;
   }
   &__title{
+    font-family: 'YS Display', -apple-system, system-ui, Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
     font-size: 65px;
     margin: 0 0 20px;
+    line-height: 75px;
   }
   &__subtitle{
     font-size: 23px;
+    line-height: 28px;
     display: block;
   }
   &__btn{
     display: inline-block;
-    padding: 15px 40px;
-    border-radius: 12px;
+    padding: 16px 40px;
+    border-radius: 16px;
     cursor: pointer;
+    max-width: 200px;
+    font-weight: 500;
   }
   &__join-btn{
     background-color: $yellow-color;
