--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -1263,6 +1263,10 @@ body{
       font-size: 14px;
     }
   }
+  &__label{
+    display: inline-block;
+    padding-bottom: 5px;
+  }
   &__submit{
     font-size: 14px;
     width: 100%;
