--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -175,38 +175,10 @@ body{
     grid-row: 1 / 2;
     grid-column: 2 / 3;  
     width: auto;
-  }
-  &__field-wrapper{
     display: grid;
-    width: auto;
-    grid-template-rows: auto auto auto; 
+    grid-template-rows: auto auto auto auto; 
     grid-template-columns: 60% 30%;
     gap: 60px 10%;
-  }
-  &__banner{
-
-  }
-  &__stories{
-    grid-row: 1 / 2;
-    grid-column: 1 / 3;
-  }
-  &__products{
-    grid-row: 2 / 3;
-    grid-column: 1 / 3;
-    overflow: auto;
-      -ms-overflow-style: none;
-      scrollbar-width: none;
-      &::-webkit-scrollbar { 
-      display: none;
-      }
-  }
-  &__news{
-    grid-row: 3 / 4;
-    grid-column: 1 / 2;
-  }
-  &__companies{
-    grid-row: 3 / 4;
-    grid-column: 2 / 3;
   }
   &__community{
     grid-row: 2 / 3;
@@ -223,6 +195,32 @@ body{
   &__article{
     grid-row: 5 / 6;
     grid-column: 1 / 3;
+  }
+  &__banner{
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+  }
+  &__stories{
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+  }
+  &__products{
+    grid-row: 3 / 4;
+    grid-column: 1 / 3;
+    overflow: auto;
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+      &::-webkit-scrollbar { 
+      display: none;
+      }
+  }
+  &__news{
+    grid-row: 4 / 5;
+    grid-column: 1 / 2;
+  }
+  &__companies{
+    grid-row: 4 / 5;
+    grid-column: 2 / 3;
   }
 }
 
@@ -265,9 +263,6 @@ body{
 }
 
 .banner{
-  &__br{
-    display: none;
-  }
   &__wrapper{
     display: grid;
     grid-template-rows: auto auto; 
@@ -275,8 +270,7 @@ body{
     gap: 30px 0;
     background-color: #fff;
     border-radius: 15px;
-    padding: 25px; 
-    margin-bottom: 50px; 
+    padding: 25px;  
   }
   &__titles{
     grid-row: 1 / 2;
@@ -302,23 +296,18 @@ body{
     justify-content: flex-end;
   }
   &__title{
-    font-family: 'YS Display', -apple-system, system-ui, Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
     font-size: 65px;
     margin: 0 0 20px;
-    line-height: 75px;
   }
   &__subtitle{
     font-size: 23px;
-    line-height: 28px;
     display: block;
   }
   &__btn{
     display: inline-block;
-    padding: 16px 40px;
-    border-radius: 16px;
+    padding: 15px 40px;
+    border-radius: 12px;
     cursor: pointer;
-    max-width: 200px;
-    font-weight: 500;
   }
   &__join-btn{
     background-color: $yellow-color;
@@ -1263,9 +1252,8 @@ body{
       font-size: 14px;
     }
   }
-  &__label{
-    display: inline-block;
-    padding-bottom: 5px;
+  &__password{
+    padding-right: 40px;
   }
   &__submit{
     font-size: 14px;
@@ -1283,9 +1271,6 @@ body{
   &__submit-disabled{
     background-color: #f8f8f8;
   }
-  &__password{
-    padding-right: 40px;
-  }
   &__password-img{
     position: absolute;
     right: 10px;
@@ -1295,6 +1280,218 @@ body{
     height: 20px;
     cursor: pointer;
     opacity: .5;     
+  }
+}
+
+.main-profile{
+  &__container{
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 14% 85%;
+    padding: 20px;
+    gap: 50px 1%;
+  }
+  &__navigation{
+    grid-column: 1 / 2;
+  }
+  &__field{
+    grid-column: 2 / 3;
+  }
+  &__navigation{
+  }
+}
+
+.profile{
+  &__wrapper{
+    display: grid;
+    grid-template-columns: 200px auto auto;
+    grid-template-rows: auto auto;
+    background-color: #fff;
+    border-radius: 20px;
+    padding: 20px;
+    gap: 30px;
+  }
+  &__avatar{
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    width: 200px;
+    height: 200px;
+    border-radius: 10px;
+    margin-right: 20px;
+  }
+  &__info{
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    max-width: 600px;
+  }
+  &__text{
+    display: flex;
+  }
+  &__name{
+    font-size: 22px;
+    margin-bottom: 10px;
+  }
+  &__location{
+    font-weight: 600;
+    margin-right: 20px;
+    font-size: 14px;
+  }
+  &__on-site-time{
+    font-size: 14px;
+  }
+  &__online{
+    margin-top: 15px;
+    font-size: 14px;
+    color: $grey-color;
+    display: flex;
+    gap: 7px;
+    align-items: center;
+  }
+  &__online-indicator{
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+  }
+  &__online-indicator-green{
+    background-color: #17d35b;
+  }
+  &__consultation{
+    display: inline-block;
+    background-color: #09a753;
+    margin-top: 20px;
+    padding: 15px 30px 15px 15px;
+    color: #fff;
+    font-size: 14px;
+    border-radius: 6px;
+    position: relative;
+    &:before{
+      content: "";
+      position: absolute;
+      width: 20px;
+      height: 10px;
+      right: 5px;
+      top: 50%;
+      transform: translateY(-50%);
+      background-image: url('../images/buttonArrow.svg');
+      background-repeat: no-repeat;
+      background-size: contain;
+      }
+  }
+  &__stat{
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+    width: 270px;
+  }
+  &__rating{
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+    padding: 10px;
+    padding-right: 60px;
+    justify-content: space-between;
+  }
+  &__rating-number{
+    height: 100%;
+    display: flex;
+    align-items: center;
+  }
+  &__stars,
+  &__comments{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    font-weight: 600;
+    font-size: 18px;
+  }
+  &__rating-img{
+    width: 17px;
+    height: 17px;
+  }
+  &__categories{
+    grid-column: 1 / 4;
+    grid-row: 2 / 3;
+    overflow: auto;
+  }
+  &__categories-list{
+    display: flex;
+    gap: 3px;
+  }
+  &__category{
+    background-color: #f2f3f7;
+    padding: 10px;
+    text-align: center;
+    &:first-child{
+      border-top-left-radius: 12px;
+      border-bottom-left-radius: 12px;
+    }
+    &:last-child{
+      border-top-right-radius: 12px;
+      border-bottom-right-radius: 12px;
+    }
+  }
+  &__category-title{
+    color: #97a0b1;
+    white-space: nowrap
+  }
+  &__category-amount{
+    margin-top: 5px;
+    font-weight: 600;
+  }
+}
+
+.documents{
+  &__wrapper{
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: 30px auto;
+    gap: 5px 15px;
+    background-color: #e5f6fe;
+    padding: 5px;
+    align-items: center;
+    border-radius: 3px;
+  } 
+  &__img{
+    width: 30px;
+    height: 45px;
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+  } 
+  &__text{
+    padding-top: 5px;
+    font-size: 14px;
+    font-weight: 600;
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
+  &__subtext{
+    padding-bottom: 5px;
+    font-size: 12px;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+  }
+}
+
+.profile-navigation{
+  &__item{
+    font-weight: bold;
+    width: 100%;
+  }
+  &__link{
+    display: inline-block;
+    padding: 20px 10px;
+    width: 100%;
+    cursor: pointer;
+    border-radius: 10px;
+    &:hover{
+      background-color: #ebebeb;
+    }
+  }
+  &__list{
+    display: flex;
+    flex-direction: column;
+  }
+  &__title-number{
+    color: $grey-color;
   }
 }
 
