--- a/resources/scss/media.scss
+++ b/resources/scss/media.scss
@@ -73,6 +73,7 @@
       grid-column: 1 / 3;
     } 
   }
+
   .banner{
     &__wrapper{
       grid-template-rows: auto auto auto auto;
@@ -115,19 +116,41 @@
 }
 
 @media (max-width: 768px) {
+  .main{
+    &__container{
+      padding: 0;
+    }
+    &__field-wrapper,
+    &__community,
+    &__article,
+    &__comments,
+    &__reviews{
+      padding: 0 20px;
+    }
+  }
+
   .comments{
     &__wrapper{
       padding: 40px 50px;
     }
   }
   .banner{
+    &__br{
+      display: block;
+    }
     &__wrapper{
       grid-template-rows: auto auto auto auto;
+      padding: 16px;
+      border-radius: 0;
     }
     &__titles{
       grid-row: 1 / 2;
       grid-column: 1 / 3;
-      text-align: center;
+    }
+    &__title{
+      font-size: 40px;
+      letter-spacing: -1px;
+      line-height: 48px;
     }
     &__buttons{
       grid-row: 2 / 3;
@@ -146,6 +169,15 @@
       justify-content: center;
     }
   }
+  .profile{
+    &__name{
+      font-size: 20px;
+    }
+    &__text{
+      flex-direction: column;
+      gap: 5px;
+    }
+  }
   .reviews{
     &__list{
       gap: 0;
@@ -156,24 +188,41 @@
     }
   }
   .footer{
+    &__wrapper{
+      padding: 30px;
+    }
+    &__title{
+      font-size: 20px;
+    }
     &__lists{
-      max-width: 100%;
       flex-wrap: wrap;
+      gap: 15px;
+      max-width: 100%;
     }
     &__list{
-      width: 50%;
+      width: 53%;
+      margin: 0;
+      font-size: 18px;
+    }
+    &__list-contacts{
+      order: 1;
+      gap: 15px;
+      width: 100%;
+      max-width: 380px;
+      flex-direction: row;
+      font-size: 17px;
+    }
+    &__list-login{
+      order: 2;
+    }
+    &__list-second{
+      order: 3;
+    }
+    &__list-third{
+      order: 4;
     }
     &__information{
       max-width: 100%;
-    }
-  }
-  .profile{
-    &__name{
-      font-size: 20px;
-    }
-    &__text{
-      flex-direction: column;
-      gap: 5px;
     }
   }
 }
@@ -209,52 +258,6 @@
       margin-left: 0;
     }
   }
-  .banner{
-    &__title{
-      font-size: 42px;
-    }
-    &__buttons{
-      flex-direction: column;
-      text-align: center;
-    }
-    &__sponsors{
-      flex-direction: column;
-      gap: 10px;  
-    }
-    &__img{
-      width: 150px;
-      height: 150px;
-    }
-    &__sponsor-link{
-      width: 20px;
-      height: 20px;
-    }
-  }
-  .comments{
-    &__wrapper{
-      padding: 20px 20px;
-    }
-  }
-  .news{
-    &__top{
-      flex-direction: column;
-      align-items: start;
-      gap: 10px;
-    }
-  }
-  .footer{
-    &__lists,
-    &__title{
-      text-align: center;
-    }
-    &__list{
-      width: 100%;
-    }
-    &__img{
-      width: 30px;
-      height: 30px;
-    }
-  }
   .profile{
     &__wrapper{
       gap: 15px;
@@ -285,12 +288,60 @@
       justify-content: center;
     }
   }
+  .banner{
+    &__buttons{
+      flex-direction: column;
+      text-align: center;
+    }
+    &__sponsors{
+      flex-direction: column;
+      gap: 10px;  
+    }
+    &__img{
+      width: 150px;
+      height: 150px;
+    }
+    &__sponsor-link{
+      width: 20px;
+      height: 20px;
+    }
+  }
+  .comments{
+    &__wrapper{
+      padding: 20px 20px;
+    }
+  }
+  .news{
+    &__top{
+      flex-direction: column;
+      align-items: start;
+      gap: 10px;
+    }
+  }
+  .footer{
+    &__wrapper{
+      padding: 20px;
+    }
+    &__list{
+      width: 100%;
+    }
+    &__list-contacts{
+      font-size: 13px;
+    }
+    &__list-item{
+      gap: 5px;
+    }
+    &__img{
+      width: 30px;
+      height: 30px;
+    }
+  }
 }
 
 @media (max-width: 450px) {
   .banner{
     &__subtitle{
-      font-size: 18px;
+      font-size: 20px;
     }
   }
 }
@@ -302,16 +353,6 @@
     }
     &__button-img{
       display: none;
-    }
-  }
-  .banner{
-    &__subtitle{
-      font-size: 18px;
-    }
-  }
-  .documents{
-    &__wrapper{
-      max-width: 245px;
     }
   }
   .profile{
