--- a/resources/views/chat/src/index.scss
+++ b/resources/views/chat/src/index.scss
@@ -20,28 +20,39 @@ body{
 .operator-chat{
   height: 100%;
   &__wrapper{
-    padding: 30px;
+    padding: 20px 0 0 20px;
     width: 100%;
     height: 100%;
     display: flex;
-    gap: 5px;
     background-color: #f1f2f6;
   }
   &__chats-wrapper{
-    flex: 18%;
+    flex: 25%;
+    height: 100%;
+    background-color: #fff;
   }
   &__active-chat-wrapper{
-    flex: 80%;
+    flex: 75%;
   }
 }
 
 .chats-list{
-  &__item{
+  &__list{
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+  }
+}
+
+.chat-item{
+  &__wrapper{
+    height: 72px;
     padding: 10px;
-    background-color: #23a0e3;
+    background-color: #fff;
+    box-shadow: 0 1px .5px rgba(11, 20, 26, .13);
     cursor: pointer;  
     &:hover{
-      background-color: #08486a;
+      background-color: #f5f6f6;
     }
   }
 }
@@ -51,10 +62,10 @@ body{
     height: 100%;
     display: flex;
     flex-direction: column;
-    // justify-content: space-between;
   }
   &__list{
     flex-grow: 1;
+    overflow: auto;
   }
 }
 
@@ -76,7 +87,7 @@ body{
 
 .chat-list{
   &__wrapper{
-    height: 100%;
+    min-height: 100%;
     background-color: #fff;
     border-top: 1px solid #000;
     padding: 20px 10px 20px 50px;
@@ -109,8 +120,28 @@ body{
 
 .bottom-form{
   &__wrapper{
-    height: 50px;
-    // background-color: #f1f2f6;
-    background-color: green;
+    height: 80px;
+    background-color: #f1f2f6;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding: 0 20px;
+  }
+  &__smiles,
+  &__add-file,
+  &__send-button{
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+  }
+  &__input{
+    flex-grow: 1;
+    background-color: #fff;
+    border-radius: 7px;
+    border: none;
+    outline: none;
+    resize: none;
+    height: 45px;
+    padding: 5px 5px 5px 20px;
   }
 }
