--- a/resources/views/chat/src/index.scss
+++ b/resources/views/chat/src/index.scss
@@ -1,3 +1,5 @@
+@import '../../../../node_modules/normalize.css/normalize';
+
 ul{
   list-style-type: none;
   padding: 0;
@@ -18,9 +20,8 @@ body{
 }
 
 .operator-chat{
-  height: 100%;
   &__wrapper{
-    padding: 20px 0 0 20px;
+    padding-left: 20px;
     width: 100%;
     height: 100%;
     display: flex;
@@ -30,30 +31,78 @@ body{
     flex: 25%;
     height: 100%;
     background-color: #fff;
+    border-top-left-radius: 15px;
   }
   &__active-chat-wrapper{
     flex: 75%;
+    border-left: 1px solid #000;
   }
 }
 
 .chats-list{
+  &__filter{
+    height: 50px;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    padding-left: 15px;
+  }
+  &__filter-item{
+    border-radius: 20px;
+    background-color: #ebebeb;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 15px;
+  }
+  &__filter-item-active{
+    border-radius: 15px;
+    color: #008069;
+    background-color: #e8fae4;
+  }
   &__list{
     display: flex;
     flex-direction: column;
     gap: 2px;
+    overflow: auto;
+    max-height: 68vh;
   }
 }
 
 .chat-item{
   &__wrapper{
+    display: grid;
+    grid-template-columns: 50px auto;
+    grid-template-rows: 48% 48%;
+    gap: 2% 15px;
+    position: relative;
     height: 72px;
-    padding: 10px;
+    padding: 10px 45px 10px 10px;
     background-color: #fff;
     box-shadow: 0 1px .5px rgba(11, 20, 26, .13);
     cursor: pointer;  
     &:hover{
       background-color: #f5f6f6;
     }
+  }
+  &__avatar{
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    height: 100%;
+    width: auto;
+    border-radius: 50%;
+  }
+  &__username{
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
+  &__last-message{
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+  }
+  &__time{
+    position: absolute;
+    top: 10px;
+    right: 10px;
   }
 }
 
@@ -95,6 +144,7 @@ body{
   &__list{
     display: flex;
     flex-direction: column;
+    gap: 10px;
   }
   &__message{
     padding: 7px 40px 10px 5px;
