--- a/resources/views/chat/src/index.scss
+++ b/resources/views/chat/src/index.scss
@@ -64,7 +64,7 @@ body{
     flex-direction: column;
     gap: 2px;
     overflow: auto;
-    max-height: 68vh;
+    max-height: calc(100vh - 120px);
   }
 }
 
@@ -115,6 +115,7 @@ body{
   &__list{
     flex-grow: 1;
     overflow: auto;
+    max-height: calc(100vh - 200px);
   }
 }
 
