--- a/resources/views/user/profile/src/index.scss
+++ b/resources/views/user/profile/src/index.scss
@@ -4,49 +4,138 @@ ul{
   list-style-type: none;
 }
 
+h2{
+  margin: 0;
+}
+
+.chat-open-button{
+  &__wrapper{
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    right: 25px;
+    bottom: 25px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    background-color: #00a884;
+    &:hover{
+      box-shadow: 0 0 27px 1.5px rgba(0,0,0,0.2);
+    }
+  }
+  &__img{
+    width: 20px;
+    height: 20px;
+  }
+}
+
 .user-chat{
   &__wrapper{
     position: fixed;
-    bottom: 50px;
-    right: 50px;
-    width: 200px;
-    height: 300px;
-    background-color: #2b5278;
-    border-radius: 20px;
-    color: #fff;
+    width: 370px;
+    height: calc(100% - 120px);
+    right: 25px;
+    bottom: 100px;
+    box-shadow: 1px 1px 25px 1px rgb(80, 89, 104);
+    background-color: #fff;
+    border-radius: 10px;
   }
-  &__active-chat{
+  &__user-chat-registration{
     height: 100%;
   }
 }
 
-.active-chat{
+.user-chat-registration{
   &__wrapper{
-    padding: 10px;
-    height: 80%;
-    overflow: auto;
-  }
-  &__list{
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    height: 100%;
   }
-  &__message-user{
-    align-self: flex-end;
+  &__header{
+    min-height: 70px;
+    padding: 10px 20px;
+    background-color: rgba(13, 25, 46, .72);
+    color: #fff;
+    display: flex;
+    align-items: center;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    font-size: 16px;
   }
-  &__message-operator{
-    align-self: flex-start;
+  &__expert-info{
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: 60px auto;
+    padding: 10px 20px;
+    background-color: #F0F6DC;
   }
-  &__message-author{
-    font-weight: bold;
+  &__expert-img{
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+  }
+  &__expert-name{
+    grid-column: 2 / 3;
+    grid-template-rows: 1 / 2;
+    font-size: 14px;
+  }
+  &__expert-profession{
+    grid-column: 2 / 3;
+    grid-template-rows: 2 / 3;
+    font-size: 12px;
+  }
+  &__guide{
+    padding: 20px;
+  }
+  &__guide-text{
+    border: 1px solid #e1e9f4;
+    padding: 16px;
+    border-radius: 10px;
+    font-size: 12px;
+    line-height: 1.5;
+  }
+  &__start-chat-button{
+    margin-top: auto;
+    padding: 15px 20px;
+    color: #fff;
+    font-size: 17px;
+    cursor: pointer;
+    background-color: #4CAF50;
+    text-align: center;
+    &:hover{
+      opacity: 0.8;
+    }
   }
 }
 
-.registrarion-form{
-  &__submit{
-    cursor: pointer;
-    &:hover{
-      text-decoration: underline;
-    }
+.chat-reg-form{
+  &__wrapper{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 20px;
+  }
+  &__label{
+    font-size: 15px;
+    font-weight: 500;
+  }
+  &__item{
+    resize: none;
+    width: 100%;
+    height: 30px;
+    min-height: 30px;
+    border-radius: 3px;
+    border: 2px solid #f5f5f5;
+    padding: 4px 10px;
+    background: #f5f5f5;
+    font-size: 14px;
   }
 }
