chat0list wrapper pb

--- a/resources/views/user/profile/src/index.scss
+++ b/resources/views/user/profile/src/index.scss
@@ -172,6 +172,7 @@ h2{
   &__wrapper{
     min-height: 100%;
     padding: 10px;
+    padding-bottom: 20px;
     position: relative;
   }
   &__list{
