--- a/resources/scss/dashboard/style.scss
+++ b/resources/scss/dashboard/style.scss
@@ -455,7 +455,7 @@ body{
 .toast{
   position: fixed;
   bottom: 20px;
-  right: 20px;
+  left: 20px;
   &__container{
     width: 200px;
     height: 50px;
