--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -220,7 +220,7 @@ body{
     grid-row: 4 / 5;
     grid-column: 1 / 3;
   }
-  &__article{
+  &__content-block{
     grid-row: 5 / 6;
     grid-column: 1 / 3;
   }
@@ -1145,7 +1145,7 @@ body{
   }
 }
 
-.article{
+.content-block{
   &__wrapper{
     width: 100%;
     max-width: 900px;
