--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -160,9 +160,16 @@ body{
   &__wrapper{
     background-color: $grey-background;
   }
-  &__container{
+  &__container-main{
     display: grid;
     grid-template-rows: auto auto auto auto auto;
+    grid-template-columns: 10% 85%;
+    padding: 20px;
+    gap: 50px 5%;
+  }
+  &__container{
+    display: grid;
+    grid-template-rows: auto;
     grid-template-columns: 10% 85%;
     padding: 20px;
     gap: 50px 5%;
@@ -220,8 +227,12 @@ body{
     grid-row: 4 / 5;
     grid-column: 1 / 3;
   }
-  &__content-block{
+  .main__container-main .main__content-block{
     grid-row: 5 / 6;
+    grid-column: 1 / 3;
+  }
+  &__content-block{
+    grid-row: 1 / 2;
     grid-column: 1 / 3;
   }
 }
