--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -225,7 +225,7 @@ body{
   }
   &__reviews{
     grid-row: 4 / 5;
-    grid-column: 1 / 3;
+  grid-column: 1 / 3;
   }
   .main__container-main .main__content-block{
     grid-row: 5 / 6;
@@ -1279,20 +1279,32 @@ body{
     padding-bottom: 5px;
   }
   &__submit{
-    font-size: 14px;
-    width: 100%;
-    height: 40px;
+    font-size: 15px;
+    width: auto;
+    min-height: 40px;
     border-radius: 10px;
-    padding: 10px;
+    padding: 5px 15px;
     cursor: pointer;  
     border: none;
     color: grey;
-    background-color: #dfdddd;
-    margin-bottom: 20px;
+    // background-color: #e01935;
+    background-color: #dedede;
+    display: block;
+    margin: 0 auto 20px;
     transition: all .3s linear;
+    font-weight: 600;
+    // color: #fff;
+    color: #333;
+    &:hover{
+      background-color: #bfbfbf;
+    }
   }
   &__submit-disabled{
-    background-color: #f8f8f8;
+    // background-color: #3276c3;
+    background-color: #ebebeb;
+    &:hover{
+      background-color: #ebebeb;
+    }
   }
   &__password{
     padding-right: 40px;
