--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -167,6 +167,7 @@ body{
     grid-template-columns: 10% 85%;
     gap: 50px 5%;
     border-radius: 32px;
+    padding: 20px;
   }
   &__container{
     display: grid;
