--- a/resources/scss/media.scss
+++ b/resources/scss/media.scss
@@ -144,7 +144,7 @@
     &__wrapper{
       grid-template-rows: auto auto auto auto;
       padding: 16px;
-      border-radius: 0;
+      border-radius: 15px;
     }
     &__titles{
       grid-row: 1 / 2;
