--- a/resources/scss/media.scss
+++ b/resources/scss/media.scss
@@ -54,7 +54,7 @@
       display: none;
     }
     &__field{
-      grid-row: auto auto auto auto auto;
+      grid-row: auto auto auto auto auto auto;
       grid-column: 1 / 3;
     }
     &__news{
@@ -63,6 +63,9 @@
     &__companies{
       grid-column: 1 / 3;
       grid-row: 5 / 6;
+    }
+    &__question-slider{
+      grid-row: 6 / 7;
     }
   }
   .main-profile{
@@ -111,6 +114,15 @@
     &__item{
       width: 47%;
       margin-bottom: 20px;
+    }
+  }
+  .question-slider{
+    &__arrow-next,
+    &__arrow-prev{
+      display: none;
+    }
+    &__wrapper{
+      width: 100%;
     }
   }
 }
@@ -187,6 +199,11 @@
     &__item{
       width: 100%;
       margin-bottom: 20px;
+    }
+  }
+  .themes{
+    &__item{
+      width: 47%;
     }
   }
   .footer{
@@ -336,6 +353,11 @@
     &__img{
       width: 30px;
       height: 30px;
+    }
+  }
+  .themes{
+    &__item{
+      width: 100%;
     }
   }
 }
