--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -19,6 +19,7 @@ $yellow-color: #ffd912;
 ul {
   list-style-type: none;
   padding: 0;
+  margin: 0;
 }
 
 a{
@@ -55,6 +56,7 @@ body{
   margin: 0 auto;
   width: 100%;
   max-width: 1300px;
+  padding: 0 10px;
 }
 
 .header{
@@ -163,7 +165,7 @@ body{
   }
   &__container-main{
     display: grid;
-    grid-template-rows: auto auto auto auto auto;
+    grid-template-rows: auto auto auto auto;
     grid-template-columns: 10% 85%;
     gap: 50px 5%;
     border-radius: 32px;
@@ -189,8 +191,12 @@ body{
   }
   &__field{
     grid-row: 1 / 2;
-    grid-column: 2 / 3;  
+    grid-column: 2 / 3;
     width: auto;
+    display: grid;
+    grid-template-rows: auto auto auto auto;
+    grid-template-columns: 60% 30%;
+    gap: 60px 10%;
   }
   &__field-wrapper{
     display: grid;
@@ -200,10 +206,11 @@ body{
     gap: 60px 10%;
   }
   &__banner{
-
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;    
   }
   &__stories{
-    grid-row: 1 / 2;
+    grid-row: 2 / 3;
     grid-column: 1 / 3;
   }
   &__products{
@@ -224,6 +231,15 @@ body{
     grid-row: 3 / 4;
     grid-column: 2 / 3;
   }
+  &__themes{
+    grid-row: 4 / 5;
+    grid-column: 1 / 3;
+  }
+  &__question-slider{
+    grid-row: 5 / 6;
+    grid-column: 1 / 3;
+    position: relative;
+  }
   &__community{
     grid-row: 2 / 3;
     grid-column: 1 / 3;
@@ -236,12 +252,8 @@ body{
     grid-row: 4 / 5;
   grid-column: 1 / 3;
   }
-  .main__container-main .main__content-block{
-    grid-row: 5 / 6;
-    grid-column: 1 / 3;
-  }
-  &__content-block{
-    grid-row: 1 / 2;
+  &__question{
+    grid-row: 3 / 4;
     grid-column: 1 / 3;
   }
 }
@@ -296,7 +308,6 @@ body{
     background-color: #fff;
     border-radius: 15px;
     padding: 25px; 
-    margin-bottom: 50px; 
   }
   &__titles{
     grid-row: 1 / 2;
@@ -1538,6 +1549,208 @@ body{
   }
   &__title-number{
     color: $grey-color;
+  }
+}
+
+.themes{
+  &__wrapper{
+    background-color: #fff;
+    border-radius: 15px;
+    padding: 25px;     
+  }
+  &__list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    row-gap: 15px;
+  }
+  &__item{
+    width: 30%;
+  }
+  &__letter{
+    display: inline-block;
+    margin-bottom: 10px;
+    font-weight: 600;
+    font-size: 22px;
+  }
+  &__sublist{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+}
+
+.question-slider{
+  & svg{
+  height: 100%;
+  width: 100%;
+  }
+  &__wrapper{
+    overflow: hidden;
+    width: calc(100% - 50px);
+  }
+  &__arrow-next{
+    box-sizing: content-box;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 10px;
+    width: 24px;
+    height: 24px;
+    background-color: #E0ECE9;
+    z-index: 100;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: all .2s linear;
+    &:hover{
+      background-color: #33836E;
+      & svg{
+        fill: #fff;
+      }
+    }
+  }
+  &__arrow-prev{
+    box-sizing: content-box;
+    position: absolute;
+    left: -50px;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 10px;
+    width: 24px;
+    height: 24px;
+    background-color: #E0ECE9;
+    z-index: 100;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: all .2s linear;
+    &:hover{
+      background-color: #33836E;
+      & svg{
+        fill: #fff;
+      }
+    }
+  }
+  & .swiper-button-disabled{
+    opacity: 0.3;
+  }
+  &__slide{
+    margin-right: -20px;
+  }
+}
+
+.question-slide{
+  &__wrapper{
+    border-radius: 20px;
+    border: 1px solid rgba(47, 43, 67, 0.15);
+    padding: 30px;
+    background-color: #fff;
+    height: 525px;
+    display: flex;
+    flex-direction: column;
+  }
+  &__time{
+    color: rgba(47, 43, 67, 0.5);
+    display: block;
+    font-size: 14px;
+    margin-bottom: 10px;
+  }
+  &__title{
+    font-size: 18px;
+    font-weight: 600;
+    display: block;
+    margin: 0;
+    margin-bottom: 15px;
+    display: block;
+    text-align: left;
+  }
+  &__text{
+    box-sizing: border-box;
+    margin: 0;
+    color: #140A32;
+    font-size: 16px;
+    line-height: 1.6;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 10;
+  }
+  &__link{
+    margin-top: auto;
+    display: inline-flex;
+    height: 55px;
+    width: 142px;
+    align-items: center;
+    justify-content: center;
+    color: #33836E;
+    font-size: 16px;
+    border: 1px solid #33836E;
+    transition: all .2s linear;
+    border-radius: 10px;
+    &:hover{
+    background-color: #33836E;
+    border-color: #33836E;
+    color: #fff;
+    }
+  }
+}
+
+.questions{
+  &__wrapper{
+    background-color: #abc3ff;
+    border-radius: 20px;
+    padding: 50px 0;
+  }
+  &__title{
+    font-size: 30px;
+    font-weight: 600;
+    margin: 0;
+  }
+  &__list{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+}
+
+.question{
+  &__wrapper{
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 25px 15px;
+    cursor: pointer;
+  }
+  &__inner{
+    display: flex;
+    align-items: center;  
+    justify-content: space-between;
+  }
+  &__title{
+    font-weight: 600;
+    padding-right: 10px;
+  }
+  &__button{
+    min-height: 40px;
+    min-width: 40px;
+    background: #107f8c;
+    color: #fff;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    transition: all .3s ease-in;    
+  }
+  &__opened{
+    .question__button{
+      transform: rotate(180deg);
+    }
+  }
+  &__ansver-wrapper{
+    max-height: 0;
+    overflow: hidden;
+    transition: all .3s ease-in;
   }
 }
 
