analytics filter and delete popup

--- a/resources/scss/dashboard/style.scss
+++ b/resources/scss/dashboard/style.scss
@@ -13,6 +13,10 @@ $grey: #7b767c;
   box-sizing: border-box;
 }
 
+#pages-title{
+  cursor: pointer;
+}
+
 ul {
   list-style-type: none;
   padding: 0;
